# KeytroL

./: .clang-format  .gitattributes  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/KL/: ComputerKey.hpp  IKeyboard.hpp  Keyboard.hpp  KeyboardLayout.hpp  MidiOut.hpp  MocWarnings.hpp  Property.hpp  Signal.hpp  Warnings.hpp
include/KL/Core/: Connection.hpp  NotifyingVector.hpp  Property.hpp  Signal.hpp  Warnings.hpp
include/KL/Core/detail/: NotifyingVector.ipp  Property.ipp  Signal.ipp
include/KL/IO/: KeyboardInput.hpp  MidiOut.hpp
include/KL/Keyboard/: ComputerKey.hpp  KeyMapping.hpp  Keyboard.hpp  KeyboardLayout.hpp
include/KL/Model/: ComputerKey.hpp  KeyMapping.hpp  KeyboardLayout.hpp  KeyboardMapping.hpp
include/KL/ViewIO/: KeyboardInput.hpp  MidiOut.hpp  MidiOutDevices.hpp  ViewKeyboardInput.hpp  ViewMidiOut.hpp  ViewMidiOutDevices.hpp
include/KL/ViewModel/: KeyboardLayout.hpp  KeyboardLayoutViewModel.hpp  XmlFile.hpp  XmlKeyboardLayout.hpp
include/KL/detail/: Signal.ipp
include/KL/platform/default/: Keyboard.ipp
include/KL/platform/win/: Keyboard.ipp
src/Core/: CMakeLists.txt  Connection.cpp
src/Core/platform/default/: CMakeLists.txt
src/Core/platform/win/: CMakeLists.txt  Keyboard.cpp
src/Core/test/: CMakeLists.txt  tst_Connection.cpp  tst_NotifyingVector.cpp  tst_Property.cpp  tst_Signal.cpp
src/IO/: CMakeLists.txt  KeyboardInput.cpp
src/IO/platform/default/: CMakeLists.txt  KeyboardInput.cpp  MidiOut.cpp
src/IO/platform/mac/: CMakeLists.txt  KeyboardInput.cpp  KeyboardInputPlatformImpl.hpp  KeyboardInputPlatformImpl.mm
src/IO/platform/mock/: CMakeLists.txt  KeyboardInput.cpp  KeyboardInputPlatformImpl.cpp  KeyboardInputPlatformImpl.hpp  MidiOut.cpp  TestKeyboardInput.cpp  TestKeyboardInput.hpp  TestMidiOut.cpp  TestMidiOut.hpp
src/IO/platform/win/: CMakeLists.txt  KeyboardInput.cpp  KeyboardInputPlatformImpl.cpp  KeyboardInputPlatformImpl.hpp  MidiOut.cpp
src/IO/test/: CMakeLists.txt  tst_KeyboardInput.cpp  tst_MidiOut.cpp
src/Keyboard/: CMakeLists.txt  ComputerKey.cpp  KeyMapping.cpp  Keyboard.cpp  KeyboardInput.cpp  KeyboardLayout.cpp
src/Keyboard/platform/default/: CMakeLists.txt  Keyboard.cpp  KeyboardInput.cpp
src/Keyboard/platform/mock/: CMakeLists.txt  Keyboard.cpp  KeyboardInput.cpp  KeyboardInputPlatformImpl.hpp  KeyboardPlatformImpl.cpp  KeyboardPlatformImpl.hpp  TestKeyboard.cpp  TestKeyboard.hpp  TestKeyboardInput.cpp  TestKeyboardInput.hpp
src/Keyboard/platform/win/: CMakeLists.txt  Keyboard.cpp  KeyboardInput.cpp  KeyboardInputPlatformImpl.hpp  KeyboardPlatformImpl.cpp  KeyboardPlatformImpl.hpp
src/Keyboard/test/: CMakeLists.txt  tst_ComputerKey.cpp  tst_KeyMapping.cpp  tst_Keyboard.cpp  tst_KeyboardInput.cpp  tst_KeyboardLayout.cpp
src/KeyboardTestApp/: CMakeLists.txt
src/KeytroLCore/: CMakeLists.txt  IKeyboard.cpp  Keyboard.cpp  MidiOut.cpp
src/KeytroLCore/platform/default/: CMakeLists.txt  Keyboard.cpp  MidiOut.cpp
src/KeytroLCore/platform/mock/: Keyboard.cpp  Keyboard.ipp  KeyboardPlatformImpl.cpp  KeyboardPlatformImpl.hpp  TestKeyboard.cpp  TestKeyboard.hpp
src/KeytroLCore/platform/win/: CMakeLists.txt  Keyboard.cpp  KeyboardPlatformImpl.cpp  KeyboardPlatformImpl.hpp  MidiOut.cpp
src/KeytroLCore/test/: CMakeLists.txt  KeyboardPlatformImpl.hpp  tst_Keyboard.cpp  tst_MidiOut.cpp  tst_Property.cpp  tst_Signal.cpp
src/KeytroLModel/: CMakeLists.txt  ComputerKey.cpp  KeyboardLayout.cpp
src/KeytroLModel/test/: CMakeLists.txt  tst_ComputerKey.cpp  tst_KeyboardLayout.cpp
src/KeytroLTestApp/: CMakeLists.txt  main.cpp
src/Midi/: CMakeLists.txt
src/Midi/platform/default/: CMakeLists.txt  MidiOut.cpp
src/Midi/platform/win/: CMakeLists.txt  MidiOut.cpp
src/Midi/test/: CMakeLists.txt  tst_MidiOut.cpp
src/Model/: CMakeLists.txt  ComputerKey.cpp  KeyMapping.cpp  KeyboardLayout.cpp  KeyboardMapping.cpp
src/Model/test/: CMakeLists.txt  tst_ComputerKey.cpp  tst_KeyMapping.cpp  tst_KeyboardLayout.cpp  tst_KeyboardMapping.cpp
src/TestApp/: CMakeLists.txt  Dell_SK-8115_US.xml  KeyboardLayoutViewModel.cpp  KeyboardLayoutViewModel.hpp  ViewKeyboard.cpp  ViewKeyboard.hpp  ViewKeyboardInput.cpp  ViewKeyboardInput.hpp  ViewMidiOut.cpp  ViewMidiOut.hpp  ViewMidiOutDevices.cpp  ViewMidiOutDevices.hpp  XmlKeyboardLayout.cpp  XmlKeyboardLayout.hpp  main.cpp  main.qml  resources.qrc
src/TestApp/KeytroL/: ComputerKey.qml  qmldir
src/ViewIO/: CMakeLists.txt  KeyboardInput.cpp  MidiOut.cpp  MidiOutDevices.cpp  ViewKeyboardInput.cpp  ViewMidiOut.cpp  ViewMidiOutDevices.cpp
src/ViewIO/test/: CMakeLists.txt  tst_KeyboardInput.cpp  tst_MidiOut.cpp  tst_MidiOutDevices.cpp
src/ViewModel/: CMakeLists.txt  KeyboardLayout.cpp  KeyboardLayoutViewModel.cpp  XmlFile.cpp  XmlKeyboardLayout.cpp
src/ViewModel/test/: CMakeLists.txt  tst_KeyboardLayout.cpp  tst_XmlFile.cpp
